Minor chrome mobile footer cropping issue fixed with baby hack

--- a/CancerGov/_src/StyleSheets/_footer.scss
+++ b/CancerGov/_src/StyleSheets/_footer.scss
@@ -87,6 +87,10 @@
 
     &:hover, &:focus {
       opacity: 0.8;
+
+      // This is a mini-hack to prevent a weird cropping issue on Chrome
+      // on mobile only when something is selected. BB 2/2018.
+      transform: scale(0.99);
     }
   }
 
